tests/js_error/source_locations/expression/assign_op/shift_left.exp
TypeError: BigInt cannot be converted to number
  ┌ tests/js_error/source_locations/expression/assign_op/shift_left.js:2:3
  |
2 | x <<= 2n;
  |   ^
Stack trace:
  at <global> (tests/js_error/source_locations/expression/assign_op/shift_left.js:2:3)